--- a/src/app/register/components/register-form/register-form.component.html
+++ b/src/app/register/components/register-form/register-form.component.html
@@ -1,4 +1,23 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <input type="text" formControlName="name" placeholder="Name">
-    <button type="submit">Enviar</button>
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
+    <mat-form-field>
+        <mat-label>Name</mat-label>
+        <input matInput type="text" formControlName="name" placeholder="Name">
+        <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput type="email" formControlName="email" placeholder="Email">
+        <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password" placeholder="Password">
+        <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Password confirmation</mat-label>
+        <input matInput type="password" formControlName="password_confirmation" placeholder="Password confirmation">
+        <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+    <button type="submit" mat-raised-button color="primary">Send</button>
 </form>
