--- a/src/app/register/components/register-form/register-form.component.html
+++ b/src/app/register/components/register-form/register-form.component.html
@@ -1,23 +1,27 @@
-<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()" [class.sending]="sending">
     <mat-form-field>
         <mat-label>Name</mat-label>
         <input matInput type="text" formControlName="name" placeholder="Name">
-        <mat-hint>Hint</mat-hint>
+        <mat-error *ngIf="form.controls['name'].hasError('required')">Required</mat-error>
     </mat-form-field>
     <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput type="email" formControlName="email" placeholder="Email">
-        <mat-hint>Hint</mat-hint>
+        <mat-error *ngIf="form.controls['email'].hasError('email') && !form.controls['email'].hasError('required')">Invalid format</mat-error>
+        <mat-error *ngIf="form.controls['email'].hasError('required')">Required</mat-error>
     </mat-form-field>
     <mat-form-field>
         <mat-label>Password</mat-label>
         <input matInput type="password" formControlName="password" placeholder="Password">
-        <mat-hint>Hint</mat-hint>
+        <mat-error *ngIf="form.controls['password'].hasError('required')">Required</mat-error>
     </mat-form-field>
     <mat-form-field>
         <mat-label>Password confirmation</mat-label>
         <input matInput type="password" formControlName="password_confirmation" placeholder="Password confirmation">
-        <mat-hint>Hint</mat-hint>
+        <mat-error *ngIf="form.controls['password_confirmation'].hasError('required')">Required</mat-error>
     </mat-form-field>
-    <button type="submit" mat-raised-button color="primary">Send</button>
+    <button class="button" type="submit" mat-raised-button [disabled]="sending" color="primary">
+        <span *ngIf="!sending">Send</span>
+        <span *ngIf="sending">Sending...</span>
+    </button>
 </form>
