--- a/src/app/register/components/register-form/register-form.component.html
+++ b/src/app/register/components/register-form/register-form.component.html
@@ -1,7 +1,7 @@
 <form class="form" [formGroup]="form" (ngSubmit)="onSubmit()" [class.sending]="sending">
     <mat-form-field>
         <mat-label>Name</mat-label>
-        <input matInput type="text" formControlName="name" placeholder="Name">
+        <input matInput type="text" formControlName="name" placeholder="Name" autofocus>
         <mat-error *ngIf="form.controls['name'].hasError('required')">Required</mat-error>
     </mat-form-field>
     <mat-form-field>
