--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,17 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+.form-container {
+    padding: 32px;
+}
+
 .form {
     display: grid;
     grid-gap: 16px;
