add logo and box login

--- a/src/app/register/components/register-form/register-form.component.html
+++ b/src/app/register/components/register-form/register-form.component.html
@@ -9,6 +9,7 @@
         <input matInput type="email" formControlName="email" placeholder="Email">
         <mat-error *ngIf="form.controls['email'].hasError('email') && !form.controls['email'].hasError('required')">Invalid format</mat-error>
         <mat-error *ngIf="form.controls['email'].hasError('required')">Required</mat-error>
+        <mat-error *ngIf="form.controls['email'].hasError('unique')">Unique</mat-error>
     </mat-form-field>
     <mat-form-field>
         <mat-label>Password</mat-label>
