--- a/src/app/register/pages/register/register.component.html
+++ b/src/app/register/pages/register/register.component.html
@@ -1,1 +1,5 @@
-<app-register-form></app-register-form>
+<div class="box">
+    <img class="logo" src="/assets/img/logo.svg" alt="logo">
+    <h1 class="box-title">Register</h1>
+    <app-register-form class="form-container"></app-register-form>
+</div>
