--- a/src/app/register/pages/register/register.component.html
+++ b/src/app/register/pages/register/register.component.html
@@ -1,5 +1,2 @@
-<div class="box">
-    <img class="logo" src="/assets/img/logo.svg" alt="logo">
-    <h1 class="box-title">Register</h1>
-    <app-register-form class="form-container"></app-register-form>
-</div>
+<h1 class="page-title">Register</h1>
+<app-register-form class="form-container"></app-register-form>
