--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet></router-outlet>
+<img class="logo" src="/assets/img/logo.svg" alt="logo">
+<router-outlet class="router-outlet"></router-outlet>
