styles box info

--- a/src/app/register/pages/register-success/register-success.component.html
+++ b/src/app/register/pages/register-success/register-success.component.html
@@ -1,1 +1,8 @@
-<h1 class="page-title">Registro existoso</h1>
+<div class="box box-info">
+    <img class="box-image" src="assets/img/opened_re_i38e.svg" alt="mailbox">
+    <h2 class="box-title">Sólo un paso más...</h2>
+    <div class="box-text">
+        <p>Te hemos enviado un email a <strong class="primary">krillin@dbz.com</strong></p>
+        <p>Verifica tu correo electrónico</p>
+    </div>
+</div>
