--- a/src/app/register/pages/register/register.component.html
+++ b/src/app/register/pages/register/register.component.html
@@ -1,2 +1,4 @@
-<h1 class="page-title">Register</h1>
-<app-register-form class="form-container"></app-register-form>
+<div class="box box-form">
+    <h1 class="box-title">Register</h1>
+    <app-register-form class="form-container"></app-register-form>
+</div>
