--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
     --primary-color: #7FA89A;
+    --primary-monochrome-dark-2: #59756C;
     --accent-color: #A88F77;
+}
+
+:root {
     --body-bg-color: #EEE;
     --box-bg-color: #FFF;
-    --box-border: 1px solid #394149;
+    --box-border: 1px solid var(--primary-monochrome-dark-2);
     --box-title-color: var(--accent-color);
+}
+
+::selection {
+    background-color: var(--primary-color);
+    color: white;
 }
 
 * {
@@ -69,6 +78,10 @@ app-root {
     padding: 32px 16px;
     border-radius: 8px;
     border: var(--box-border);
+
+    & .box-title {
+        color: var(--box-title-color);
+    }
 }
 
 .box-info {
@@ -78,7 +91,6 @@ app-root {
 
     & .box-title {
         font-size: 18px;
-        color: var(--box-title-color);
     }
 
     & .box-image {
@@ -93,7 +105,12 @@ app-root {
     }
 }
 
-.mat-typography h1.page-title,
+.box-form {
+    justify-items: center;
+    grid-gap: 32px 0;
+}
+
+.mat-typography h1.box-title,
 .mat-typography h2.box-title,
 .mat-typography p {
     margin: 0;
