--- a/src/app/register/pages/register/register.component.html
+++ b/src/app/register/pages/register/register.component.html
@@ -1,4 +1,4 @@
 <div class="box box-form">
-    <h1 class="box-title">Register</h1>
+    <h1 class="box-title" i18n="@@register-page-title">Register</h1>
     <app-register-form class="form-container"></app-register-form>
 </div>
